<resources>
    <string name="Interstial_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Banner_ID" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Native_ID" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="Reward_ID" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="AppOpen_ID" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="app_name">Long Status Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="get_started">Get Started</string>
    <string name="loading">Data Loading</string>
    <string name="allow_permission_first">Allow all permissions to work properly</string>
    <string name="storage_access">Storage access</string>
    <string name="storage_access_desc">Storage Access is required to store the deleted media files</string>
    <string name="allow">Allow</string>
    <string name="notification_access">Notification access</string>
    <string name="notification_desc">Allow Recover Chat to read messages and media files.</string>
    <string name="battery_desc">This allow Recover Chat to stay connected in the background so that it can recover properly.</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="next">Next</string>
    <string name="deleted_images">Deleted Images</string>
    <string name="deleted_videos">Deleted Videos</string>
    <string name="note">Battery Optimization</string>
    <string name="reduce_battery_life">To keep the application working correctly without being killed by the system,allow app to always run in background, this may reduce battery life</string>
    <string name="folder_permission">Folder Permission</string>
    <string name="use_folder_permission">Use folder permission to access device storage only for status purpose.If you decline app will not work.</string>
    <string name="use_this_folder">Use This Folder</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="got_it">Ok got it</string>
    <string name="open">OPEN</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="my_status">My Status</string>
    <string name="business_status">Business Status</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="done">Done</string>
    <string name="save">save</string>
    <string name="type_a_message">Type a message</string>
    <string name="reply">REPLY</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="messages">Messages</string>
    <string name="cant_send_message">Cannot send message right now</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="write_a_message">Write message here</string>
    <string name="enter_number">Enter Number</string>
    <string name="business">Business</string>
    <string name="deleted_media">Deleted Media</string>
    <string name="languages">Languages</string>
    <string name="privacy">Privacy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="deleted_media_info">Here you will see all the deleted media messages</string>
    <string name="no_deleted_media">No Deleted Media</string>
    <string name="delete_media_confirm">Are you sure you want to delete this file ?</string>
    <string name="media_msg_deleted">Media message deleted</string>
    <string name="recovered_deleted">I recovered a deleted media!</string>
    <string name="file_deleted">File Deleted</string>
    <string name="copied">Copied</string>
    <string name="no_new_status">No New Status</string>
    <string name="status_info">You can download all Whatsapp status from here</string>
    <string name="status_info_two">(Images,Videos and Gifs)</string>
    <string name="wa_status_info">You can download all WA Business Status from here</string>
    <string name="empty_saved_status">Empty Saved Status</string>
    <string name="saved_status_info">Here you will see all the saved status</string>
    <string name="alread_allowed">Already allowed</string>
    <string name="restart_service">Restart Service</string>
    <string name="smart_kit">Smart Tool Kit</string>
    <string name="text_to_emoji">Text to Emoji</string>
    <string name="copy_text">Copy</string>
    <string name="text_repeater">Text Repeater</string>
    <string name="enter_text">Enter Text</string>
    <string name="stylish_text">Stylish Text</string>
    <string name="enter_emoji">Enter Emoji</string>
    <string name="apply_style">Apply Style</string>
    <string name="only_allow"> Note: Please write A-Z or a-z</string>
    <string name="next_line">Next Line</string>
    <string name="repeat">Repeat</string>
    <string name="select_emoji">Select emoji</string>
    <string name="instructions">Instructions</string>
    <string name="recover_deleted_messages">Long Status and RDM</string>
    <string name="required_permissions">Required Permissions</string>
    <string name="choose_lang">Choose your language</string>
    <string name="unseen_chat">Unseen Chat</string>
    <string name="recover_media">Recover Media</string>
    <string name="status_saver">Status Saver</string>
    <string name="whatsapp_web">Whatsapp Web</string>
    <string name="save_and_share_your_status_with_friends">Save and share your status with friends</string>
    <string name="convert">Convert</string>
    <string name="clear_text">Clear</string>
    <string name="max_limit_is_999">max limit is 999</string>
    <string name="send">Send</string>
    <string name="no_chat_available">No Chat Available</string>
    <string name="recover_deleted_media">Recover your deleted media</string>
    <string name="feedback">Feedback</string>
    <string name="the_app_need">The app need following permission to perform recovery</string>
    <string name="please_tell">Please tell us more details and attach files so that we can locate and solve the problem faster</string>
    <string name="tell_us_the">Tell us the problem you encountered</string>
    <string name="submit">Submit</string>
    <string name="message_notification">Message Notification</string>
    <string name="notifies_you">Notifies you of all new messages</string>
    <string name="deleted_message_notification">Deleted Message Notification</string>
    <string name="note_to_save_status">Note: To save status, first open whatsapp and see status then open this app and save the status you want to save</string>
    <string name="this_features">This features uses Whatsapp services to start a conversation with any number included</string>
    <string name="note_it">Note:it does not store the number</string>
    <string name="how_it_work">How this app works?</string>
    <string name="slide_one">LongStatusRDM wait for every message in  notification bar and store them. LongStatusRDM will notify you whenever its detects any deleted message of WhatsApp or WhatsApp Business</string>
    <string name="required">Required Settings</string>
    <string name="slide_two">1) Keep On your message notification \n 2) Keep On your auto save media in whatsapp.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="slide_three">This App does not recover your old data. It will recover those messages which is received after the installation of this app.</string>
    <string name="message_anyone">Message anyone without saving numbers</string>
    <string name="notifies_you_of_a">Notifies you of any deleted messages</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quit">Quit</string>
    <string name="a" translatable="false">eeeen essssssssen essssssssen eeeen essssssssen essssssssen essssssssennn</string>
    <string name="b" translatable="false">eeeen essssssssssen essssssssssen eeeen essssssssssen essssssssssen essssssssssen eeeenn</string>
    <string name="c" translatable="false">sseeeen essssssssssen en en en essssssssssen sseeeenn</string>
    <string name="d" translatable="false">seeeen esssssssssssen esssssssssssssen essssssssssssssen esssssssssssssen esssssssssssen eeeenn</string>
    <string name="e" translatable="false">eeeen en en eeeen en en eeeenn</string>
    <string name="f" translatable="false">eeeen en en eeeen en en enn</string>
    <string name="g" translatable="false">sseeeen essssssssssen en essseeen essssssssssen essssssssssen sseeeenn</string>
    <string name="h" translatable="false">esssssssssssen esssssssssssen esssssssssssen eeeeen esssssssssssen esssssssssssen esssssssssssenn </string>
    <string name="i" translatable="false">eeeeen sssssssen sssssssen sssssssen sssssssen sssssssen eeeeen </string>
    <string name="j" translatable="false">eeeeen sssssssen sssssssen sssssssen sssssssen esssen sseen </string>
    <string name="k" translatable="false">esssssssssssen essssssssen essssen esen essssen essssssssen esssssssssssen </string>
    <string name="l" translatable="false">en en en en en en eeeeenn</string>
    <string name="m" translatable="false">esssssssssssssen eesssssseen essessesssen esssssesssssen esssssssssssssen esssssssssssssen esssssssssssssen </string>
    <string name="n" translatable="false">essssssssssssen eessssssssen essessssssen essssessssen essssssessen esssssssseen esssssssssssen </string>
    <string name="o" translatable="false">ssseeeen essssssssssssen essssssssssssen essssssssssssen essssssssssssen essssssssssssen ssseeeen  </string>
    <string name="p" translatable="false">eeeen essssssssen essssssssen eeeen en en enn</string>
    <string name="q" translatable="false">ssseeeen essssssssssssen essssssssssssen essssssssssssen esssssessssen esssssssessen ssseeeen sssssssssssssssen</string>
    <string name="r" translatable="false">eeeen essssssssen essssssssen eeeen essen esssssen esssssssenn</string>
    <string name="s" translatable="false">ssseeeen en en ssseeen sssssssssssssen sssssssssssssen eeeen</string>
    <string name="t" translatable="false">eeeeen sssssssen sssssssen sssssssen sssssssen sssssssen sssssssen</string>
    <string name="u" translatable="false">sessssssssssen sessssssssssen sessssssssssen sessssssssssen sessssssssssen sessssssssssen sssseeen</string>
    <string name="v" translatable="false">sessssssssssen sessssssssssen sessssssssssen sessssssssssen sessssssssssen ssssessssen sssssssen</string>
    <string name="w" translatable="false">esssssssssssssen esssssssssssssen esssssssssssssen esssssesssssen essessesssen eesssssseen esssssssssssssen</string>
    <string name="x" translatable="false">essssssssssssen sssesssssssen sssssesssen  ssssssssen sssssesssen sssesssssssen essssssssssssen </string>
    <string name="y" translatable="false">essssssssssssen sssesssssssen sssssesssen  ssssssssen sssssen sssen en</string>
    <string name="z" translatable="false">eeeen sssssssssssen sssssssssen  sssssssen sssssen sssen eeeen</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="language">Language</string>
    <string name="app_not_installed">App not installed.</string>
    <string name="please_give_right_path">Please give right path.</string>
    <string name="unseen_requires_folder_access_desc"><b>\'Whatsapp Media Folder Access\'</b> permission is needed to access
        Statuses for devices running Android Version 10 or greater.</string>
</resources>