<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/et_bg"
    android:backgroundTint="@color/back_grey"
    android:layout_margin="12sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:letterSpacing="0.1"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/folder_permission"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="5dp"
        android:padding="10dp"
        android:text="@string/use_folder_permission"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:paddingLeft="15dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/yes"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="15dp"
            android:text="@string/use_this_folder"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>