<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="in.whatsaga.whatsapplongerstatus.pro.ui.smartkit.StylishTextActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/stylish_text"
            app:titleTextColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:layout_above="@id/adView"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                android:layout_margin="12sp"
                app:cardCornerRadius="12sp">

                <TextView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alexbrush"
                    android:gravity="center"
                    android:text="S"
                    android:textColor="@color/orange"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dark"
                android:text="@string/only_allow"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <EditText
            android:id="@+id/ed_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ccp"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:background="@drawable/et_bg"
            android:backgroundTint="@color/back_buttn"
            android:hint="@string/enter_text"
            android:fontFamily="@font/poppins"
            android:padding="12sp"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:textColor="@color/dark"
            android:textColorHint="@color/textColor" />

        <Button
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="12sp"
            android:background="@drawable/button_click"
            android:text="@string/apply_style"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/stylish_item"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/Banner_ID">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>